@@ -10,6 +10,7 @@ fsplugin.messages.sent.purge.expired=600
 fsplugin.messages.failed.action=archive
 fsplugin.messages.failed.purge.worker.cronExpression=0 0/1 * * * ?
 fsplugin.messages.failed.purge.expired=
+fsplugin.messages.locks.purge.expired=
 #fsplugin.messages.received.purge.expired=
 fsplugin.messages.received.purge.worker.cronExpression=0 0/1 * * * ?
 fsplugin.messages.locks.purge.worker.cronExpression=0 0/1 * * * ?
